<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.happyfit.PrivacyPolicy"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColor"
        android:fontFamily="monospace"
        android:text="@string/abtu"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="50dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip1"
        android:fontFamily="monospace"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip2"
        android:fontFamily="monospace"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" android:textAlignment="center"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip3"
        android:fontFamily="monospace"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip4"
        android:fontFamily="monospace"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip5"
        android:fontFamily="monospace"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip6"
        android:fontFamily="monospace"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip7"
        android:fontFamily="monospace"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip8"
        android:fontFamily="monospace"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip9"
        android:fontFamily="monospace"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip10"
        android:fontFamily="monospace"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:text="@string/prip11"
        android:fontFamily="monospace"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/btnAcc"
        android:textColor="@android:color/white"
        android:layout_marginLeft="320dp"
        android:onClick="next"
        />

</LinearLayout>
