<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.happyfit.MainScreen"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/iconColor"
        android:text="@string/abt"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="50dp" />

    <!--Birthday-->
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bday"
            android:textSize="20dp"
            android:fontFamily="monospace"
            android:textColor="@android:color/white"
            />

        <EditText
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/datep"
            />
    </LinearLayout>
    <!--Birthday-->

    <!--Height-->
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hei"
            android:textSize="20dp"
            android:fontFamily="monospace"
            android:textColor="@android:color/white"
            />
        <EditText
            android:digits="0123456789."
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:layout_marginLeft="5dp"
            android:layout_width="100dp"
            android:textColorHint="@android:color/darker_gray"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/edh"
            />
        <EditText
            android:layout_width="100dp"
            android:digits="0123456789."
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/edh1"
            android:hint="@string/in"
            android:textColorHint="@android:color/darker_gray"
            android:visibility="gone"
            />
        <Spinner
            android:layout_width="40pt"
            android:minWidth="50dp"
            android:background="@color/iconColor"
            android:layout_height="wrap_content"
            android:id="@+id/sph"
            />

    </LinearLayout>

    <!--Height-->

    <!--Weight-->
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Wei"
                android:textSize="20dp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                />
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_width="200dp"
                android:digits="0123456789."
                android:inputType="phone"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/edw"
                />
            <Spinner
                android:layout_width="40pt"
                android:minWidth="50dp"
                android:background="@color/iconColor"
                android:layout_height="wrap_content"
                android:id="@+id/spw"
                />
        </LinearLayout>


    <!--Weight-->

    <!--Gender-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp">
     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gndr"
            android:textSize="20dp"
            android:fontFamily="monospace"
            android:textColor="@android:color/white"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gndrm"
                android:id="@+id/m"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:checked="false"
                 />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gndrf"
                android:id="@+id/f"
                android:layout_marginLeft="10dp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:checked="false"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gndrus"
                android:id="@+id/us"
                android:layout_marginLeft="10dp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:checked="true"
                />

        </RadioGroup>
    </LinearLayout>
    <!--Gender-->

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/btn"
        android:fontFamily="monospace"
        android:onClick="toHome"
        android:text="@string/btnPri"
        android:textColor="@android:color/white"
        android:textSize="25dp" />
</LinearLayout>
